# ploydok

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  package.json  tsconfig.base.json  turbo.json
.claude/: settings.json
.claude/hooks/: create-worktree.sh  remove-worktree.sh
.claude/rules/: README.md  agent-rust.md  auth.md  commands.md  commits.md  db.md  infra.md  monorepo.md  style.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  security.md
.github/workflows/: ci-integration.yml  ci.yml  dco.yml  ghcr-cleanup.yml  installer.yml  release-images.yml
agent/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.prod
agent/config/: dev-validator.toml
agent/ploydok-agent/: Cargo.toml  README.md
agent/ploydok-agent/src/: audit.rs  audit_signer.rs  boot_guard.rs  host_stats.rs  lib.rs  main.rs  monitor.rs  pki.rs  service.rs  socket_config.rs  validator.rs
agent/ploydok-agent/tests/: age_validation.rs  allowlist.rs  audit_logging.rs  audit_signer.rs  boot_guard.rs  container_exec_state.rs  error_mapping.rs  exec_validator.rs  inspect_health_validator.rs  pki_bootstrap.rs  socket_path.rs  socket_runtime.rs  validator_config.rs
agent/ploydok-cli/: Cargo.toml
agent/ploydok-cli/src/: audit_verify.rs  db.rs  lib.rs  main.rs  recovery.rs
agent/ploydok-cli/tests/: audit_verify.rs  recovery.rs
apps/api/: .env.example  .env.local.example  Dockerfile  package.json
apps/web/: Dockerfile  eslint.config.js  package.json  playwright.config.ts  vite.config.ts
docs/: PRD.md  gap-analysis.md  testing-strategy.md
docs/adr/: 0002-auth-design.md  0003-ui-design.md  0004-build-strategy.md
docs/audits/: 2026-04-22_00h17_audit-dokploy-coolify.md  2026-04-24_20h21_gap-dokploy-sidebar.md
docs/install/: coexist.md
docs/plans/: PLAN-app-detail-refonte.md  PLAN-build-strategy-v2.md  PLAN-sprint-3.1.1.md  PLAN-sprint-3.2.md  PLAN-sprint-4.md
docs/research/: RESEARCH-app-detail-refonte.md  install-strategy.md
docs/runbooks/: buildkit-rootless.md  framework-builds.md  sprint-4-operations.md  sprint3-e2e-real.md  sprint3-infra-setup.md
docs/security/: pentest-v1.md
docs/sprints/: README.md  sprint-1-fondations.md  sprint-2-agent-caddy.md  sprint-3-DoD.md  sprint-3-deploy-from-git.md  sprint-3.1.1-webhook-autodeploy.md  sprint-3.2-stack-classifier-recipes.md  sprint-3bis-multi-source-quotas.md  sprint-4-secrets-domaines-db.md  sprint-5-copilot-readonly.md  sprint-6-hardening-release.md  sprint-7-parite-cdn-previews-static-cron-volumes.md  sprint-9-installer-production.md  sprint-secops-queue-trust.md  sprint-secops-system-jobs.md
infra/: .env.example  README.md  docker-compose.test.yml  docker-compose.yml
infra/adminer/: Dockerfile  index.php
infra/buildkit/: buildkitd.toml
infra/caddy/: Dockerfile
infra/garage/: garage.toml
infra/registry/: config.yml
installer/: bootstrap.sh  install.sh  ploydok-cli
installer/templates/: Caddyfile  apache-ploydok.conf  buildkitd.toml  docker-compose.yml  docker-stack.yml  nginx-ploydok.conf  ploydok-compose.service  ploydok-port-isolation.service  ploydok-port-isolation.sh  ploydok-update-stack.sh  ploydok-update.service  ploydok-update.timer  ploydok.service  ploydok.target  (+1 more)
project-docs/: PRD.md  README.md
scripts/: audit-app-db-links.ts  audit-rootless.sh  check-spdx.test.ts  check-spdx.ts  e2e-spawn-nginx.sh  generate-openapi.ts  migrate-network-isolation.ts  migrate-sqlite-to-pg.ts  run-dod.ts  smoke-registry.sh  test-webhook-e2e.sh
(+828 files in other folders)
