[package]
name = "ploydok-agent"
version = "0.1.0"
edition = "2021"
description = "Ploydok gRPC daemon — proxies Docker operations with allowlist enforcement"
license = "AGPL-3.0-only"

[[bin]]
name = "ploydok-agent"
path = "src/main.rs"

[lib]
name = "ploydok_agent"
path = "src/lib.rs"

[dependencies]
# gRPC / protobuf
tonic = { version = "0.13", features = ["transport", "tls-ring"] }
prost = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"

# Docker
bollard = "0.17"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Tar archive (image build context)
tar = "0.4"
bytes = "1"

# TLS / PKI
rcgen = { version = "0.13", features = ["pem"] }
sha2 = "0.10"
hex = "0.4"
x509-parser = "0.16"

# HTTP client (monitoring ping)
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# Validation helpers
regex-lite = "0.1"
toml = "0.8"

# Internal
ploydok-proto = { path = "../crates/ploydok-proto" }

# Syscalls (statvfs pour disk usage host)
libc = "0.2"

# Ed25519 signing for audit logs
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
rand_core = { version = "0.6", features = ["std"] }
zeroize = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
serial_test = "3"
mockall = "0.13"
