[package]
name = "ploydok-cli"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Ploydok CLI — admin recovery and management tools"

[[bin]]
name = "ploydok-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64ct = { version = "1", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
ed25519-zebra = "3.1"
hex = "0.4"
nix = { version = "0.29", features = ["user"] }
postgres = "0.19"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
